--- a/Charles Truluck/Base.lproj/Main.storyboard
+++ b/Charles Truluck/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yqD-qR-Y9p">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="yqD-qR-Y9p">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
@@ -20,26 +20,10 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="i9X-hX-8kr">
                                 <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="WWDC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZTb-uz-g6b">
-                                <rect key="frame" x="254" y="579" width="71" height="21"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text=" WWDC" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsLetterSpacingToFitWidth="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZTb-uz-g6b">
+                                <rect key="frame" x="247" y="579" width="75" height="21"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                 <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9b-jZ-dBf">
-                                <rect key="frame" x="326" y="579" width="20" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Hello there!" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nSY-lV-9gV">
-                                <rect key="frame" x="159" y="275" width="282" height="50"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="50" id="gSy-iI-ber"/>
-                                    <constraint firstAttribute="width" constant="282" id="oUZ-11-dPN"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" name="HelveticaNeue-Light" family="Helvetica Neue" pointSize="38"/>
-                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7Kb-ab-5tX">
@@ -74,39 +58,51 @@
                                     <action selector="aboutMeAction:" destination="vXZ-lx-hvc" eventType="touchUpInside" id="Wr9-b0-Or9"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WWDC-icon" translatesAutoresizingMaskIntoConstraints="NO" id="vEb-It-FMY">
-                                <rect key="frame" x="170" y="170" width="260" height="260"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="WWDC-icon" translatesAutoresizingMaskIntoConstraints="NO" id="Ytb-G2-fCy">
+                                <rect key="frame" x="180" y="180" width="240" height="240"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="260" id="33O-pf-Ty0"/>
-                                    <constraint firstAttribute="height" constant="260" id="Ftw-ly-QgZ"/>
+                                    <constraint firstAttribute="height" constant="240" id="bfW-bO-GpO"/>
+                                    <constraint firstAttribute="width" constant="240" id="s1D-hK-q6w"/>
                                 </constraints>
                             </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Hello There!" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a0o-uk-gPv">
+                                <rect key="frame" x="206" y="282" width="188" height="35"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="35"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="15" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="a9b-jZ-dBf">
+                                <rect key="frame" x="321" y="579" width="20" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="centerY" secondItem="Ytb-G2-fCy" secondAttribute="centerY" id="0iz-ta-zIs"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="a9b-jZ-dBf" secondAttribute="bottom" id="18y-wk-GgZ"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="7Kb-ab-5tX" secondAttribute="bottom" constant="20" id="2dw-dI-d8m"/>
                             <constraint firstAttribute="centerX" secondItem="i9X-hX-8kr" secondAttribute="centerX" id="3J8-bc-gco"/>
-                            <constraint firstAttribute="centerY" secondItem="nSY-lV-9gV" secondAttribute="centerY" id="48Z-1m-YGI"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="ZTb-uz-g6b" secondAttribute="bottom" id="7ET-Ib-2xN"/>
-                            <constraint firstAttribute="centerX" secondItem="nSY-lV-9gV" secondAttribute="centerX" id="Ass-xA-t3T"/>
+                            <constraint firstAttribute="centerX" secondItem="Ytb-G2-fCy" secondAttribute="centerX" id="7LV-dU-ogp"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="SK0-6V-fLE" secondAttribute="bottom" constant="20" id="B2J-6G-Gyg"/>
                             <constraint firstItem="7Kb-ab-5tX" firstAttribute="trailing" secondItem="kh9-bI-dsS" secondAttribute="trailingMargin" id="C4r-Eq-Svm"/>
                             <constraint firstItem="2fi-mo-0CV" firstAttribute="top" secondItem="i9X-hX-8kr" secondAttribute="bottom" constant="-50" id="Gqu-4P-PMp"/>
                             <constraint firstAttribute="centerX" secondItem="ZTb-uz-g6b" secondAttribute="centerX" constant="10.5" id="SeB-Xr-euK"/>
-                            <constraint firstItem="a9b-jZ-dBf" firstAttribute="leading" secondItem="ZTb-uz-g6b" secondAttribute="trailing" constant="1" id="Upn-wW-wxK"/>
                             <constraint firstItem="i9X-hX-8kr" firstAttribute="top" secondItem="kh9-bI-dsS" secondAttribute="topMargin" constant="-50" id="WhT-2M-9nA"/>
                             <constraint firstAttribute="centerY" secondItem="i9X-hX-8kr" secondAttribute="centerY" id="XJb-iE-znY"/>
+                            <constraint firstAttribute="centerY" secondItem="a0o-uk-gPv" secondAttribute="centerY" id="Y4P-ha-toR"/>
                             <constraint firstItem="SK0-6V-fLE" firstAttribute="leading" secondItem="kh9-bI-dsS" secondAttribute="leadingMargin" id="ZRB-Cp-1K5"/>
-                            <constraint firstAttribute="centerY" secondItem="vEb-It-FMY" secondAttribute="centerY" id="qHo-Mx-hZe"/>
-                            <constraint firstAttribute="centerX" secondItem="vEb-It-FMY" secondAttribute="centerX" id="yyH-Vn-Ieo"/>
+                            <constraint firstAttribute="centerX" secondItem="a0o-uk-gPv" secondAttribute="centerX" id="fST-Vl-9Ox"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="QAp-pV-dEW"/>
                     <connections>
                         <outlet property="aboutMeButton" destination="SK0-6V-fLE" id="YqU-Co-fRS"/>
                         <outlet property="backgroundView" destination="i9X-hX-8kr" id="z0b-ye-ai5"/>
-                        <outlet property="helloLabel" destination="nSY-lV-9gV" id="m0a-5S-ecv"/>
+                        <outlet property="helloLabel" destination="a0o-uk-gPv" id="LW5-ej-3dv"/>
+                        <outlet property="meImage" destination="Ytb-G2-fCy" id="DTk-cd-98R"/>
                         <outlet property="projectsButton" destination="7Kb-ab-5tX" id="fay-kd-mwC"/>
                         <segue destination="f3E-u4-9po" kind="custom" identifier="aboutMeSegue" customClass="PushNoAnimationSegue" customModule="Charles_Truluck" customModuleProvider="target" id="WjI-0Q-mMv"/>
                         <segue destination="WSY-Dg-y0t" kind="custom" identifier="projectsSegue" customClass="PushNoAnimationSegue" customModule="Charles_Truluck" customModuleProvider="target" id="NSM-Nt-pVF"/>
@@ -327,14 +323,14 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JHA-Sf-dxZ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="247" y="324"/>
+            <point key="canvasLocation" x="247" y="318"/>
         </scene>
     </scenes>
     <resources>
-        <image name="WWDC-icon" width="1208" height="1206"/>
+        <image name="WWDC-icon" width="576" height="561"/>
         <image name="background" width="1080" height="1080"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="Pv7-5V-gxT"/>
+        <segue reference="VjB-Bn-0cJ"/>
     </inferredMetricsTieBreakers>
 </document>
