Refined HTML icon in Previous Projects.

--- a/Charles Truluck/ProjectsScroller.xib
+++ b/Charles Truluck/ProjectsScroller.xib
@@ -75,7 +75,7 @@
                     <color key="textColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="HTML5_Logo_512" translatesAutoresizingMaskIntoConstraints="NO" id="3ZJ-UZ-Fhv">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="html" translatesAutoresizingMaskIntoConstraints="NO" id="3ZJ-UZ-Fhv">
                     <rect key="frame" x="1549" y="140" width="278" height="281"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="A simple project, but a fun one. I used Nyan Cat to help me learn about looping animations and music in HTML 5." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e6H-FD-3dZ">
@@ -101,8 +101,8 @@
         </view>
     </objects>
     <resources>
-        <image name="HTML5_Logo_512" width="512" height="512"/>
         <image name="Java" width="2000" height="3667"/>
+        <image name="html" width="512" height="512"/>
         <image name="js" width="450" height="450"/>
         <image name="php" width="2000" height="1060"/>
     </resources>
